--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="Default">
 <head>
+	<meta name="google-site-verification" content="2NrqunodnUGjjnQZje3lFFO3mPOc14iGQ5u1AmBAlA0" />
     <meta charset="utf-8">
     <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
     <meta name="description" content="">
